fix: remove broken code

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -192,7 +192,7 @@ window#waybar.empty #window {
  * Custom Exit
  * ----------------------------------------------------- */
 
-#custom-exit {
+#custom-power {
     margin: 2px 20px 0px 0px;
     padding:0px;
     font-size:20px;
