--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -25,7 +25,7 @@
  * ----------------------------------------------------- */
 
 * {
-    font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "FiraCode Nerd Font Bold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     border: none;
     border-radius: 0px;
 }
@@ -155,10 +155,9 @@ window#waybar.empty #window {
 #clock {
     margin-right: 20px;
     font-size: 20px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     color: @iconcolor;
-    padding: 4px 10px 2px 10px;
-    font-size: 16px;
+    padding: 4px 10px;
 }
 
 #custom-quicklink1,
@@ -303,13 +302,11 @@ window#waybar.empty #window {
 @keyframes blink {
     to {
         background-color: @backgroundlight;
-        color: @textcolor2;
     }
 }
 
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
-    color: @textcolor3;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
